--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,8 @@ dependencies:
     firebase_core: ^1.19.1
     firebase_auth: ^3.4.1
     cloud_firestore: ^3.2.1
+    firebase_storage: ^10.3.1
+    font_awesome_flutter: ^10.1.0
 
 dev_dependencies:
     flutter_test:
