--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -62,7 +62,19 @@ flutter:
 
     # To add assets to your application, add an assets section, like this:
     assets:
-        - images/
+        - assets/images/
+
+    fonts:
+        - family: Raleway
+          fonts:
+              - asset: assets/fonts/Raleway-Regular.ttf
+                weight: 400
+              - asset: assets/fonts/Raleway-Thin.ttf
+                weight: 200
+              - asset: assets/fonts/Raleway-Bold.ttf
+                weight: 700
+              - asset: assets/fonts/Raleway-Italic.ttf
+                style: italic
 
     # An image asset can refer to one or more resolution-specific "variants", see
     # https://flutter.dev/assets-and-images/#resolution-aware.
