--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,8 @@ dependencies:
     cloud_firestore: ^3.2.1
     firebase_storage: ^10.3.1
     font_awesome_flutter: ^10.1.0
+    image_picker: ^0.8.5+3
+    uuid: ^3.0.6
 
 dev_dependencies:
     flutter_test:
