--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
     font_awesome_flutter: ^10.1.0
     image_picker: ^0.8.5+3
     uuid: ^3.0.6
+    google_maps_flutter: ^2.1.8
 
 dev_dependencies:
     flutter_test:
@@ -65,6 +66,7 @@ flutter:
     # To add assets to your application, add an assets section, like this:
     assets:
         - assets/images/
+        - assets/map_styles/
 
     fonts:
         - family: Raleway
