--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
     image_picker: ^0.8.5+3
     uuid: ^3.0.6
     google_maps_flutter: ^2.1.8
+    location: ^4.4.0
 
 dev_dependencies:
     flutter_test:
