--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
     uuid: ^3.0.6
     google_maps_flutter: ^2.1.8
     location: ^4.4.0
+    flutter_slidable: ^1.3.2
 
 dev_dependencies:
     flutter_test:
