--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
     google_maps_flutter: ^2.1.8
     location: ^4.4.0
     flutter_slidable: ^1.3.2
+    charts_flutter: ^0.12.0
 
 dev_dependencies:
     flutter_test:
